# reinforcement-learning-gymnasium-nn

./: .gitignore  CartPole-v1_critic_author.py  CartPole-v1_critic_test.py  CartPole-v1_static.py  CartPole-v1_static_small_lr0.01.py  CartPole-v1_static_smaller_network.py  LunarLander-v3.py  LunarLander-v3_test.py  README.md  pyproject.toml  requirements.txt  solution.py
models/CartPole-v1_0.0001_critic_author/: model_1625_actor.keras  model_1625_critic.keras
models/CartPole-v1_0.0001_static/: model_1600.keras
models/CartPole-v1_0.0001_static_small/: final.keras
models/CartPole-v1_0.01_static_small/: model_1775.keras
models/CartPole-v1_1e-05_critic_author/: final_actor.keras  final_critic.keras
models/CartPole-v1_1e-05_static/: final.keras
models/CartPole-v1_1e-05_static_small/: final.keras
models/LunarLander-v3_5e-06/: final.keras
