[project]
name = "uwlandownik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,classic-control]>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "swig>=4.3.1",
    "tensorflow>=2.19.0",
    "tensorflow-probability[tf]>=0.25.0",
    "tqdm>=4.67.1",
]
